--- a/app/code/Krga/Blog/view/frontend/web/css/global-styles.css
+++ b/app/code/Krga/Blog/view/frontend/web/css/global-styles.css
@@ -8,6 +8,7 @@
 
 .posts-list-filter-holder .filter-item.active a {
     text-decoration: underline;
+    pointer-events: none;
 }
 
 .posts-holder {
@@ -51,11 +52,6 @@
 
 .post-excerpt {
     margin: 0 0 7px;
-}
-
-.post-info .date:after, 
-.post-info .reading-time:after {
-    content: ';';
 }
 
 .post-content {
