Single Tag template refactors

--- a/app/code/Krga/Blog/view/frontend/templates/parts/title.phtml
+++ b/app/code/Krga/Blog/view/frontend/templates/parts/title.phtml
@@ -4,16 +4,16 @@ $parentBlock = $block->getData('parent_block');
 $post = $block->getData('post');
 $type = $block->getData('type');
 
-$titleTag = $type === 'list' ? 'h3' : 'h1';
+$titleTag = $type === 'single' ? 'h1' : 'h3';
 
 ?>
 
 <<?php echo $titleTag; ?> class="post-title">
-    <?php if( $type === 'list' ) { ?>
+    <?php if( $type !== 'single' ) { ?>
         <a class="post-link" href="<?php echo $block->getUrl('posts/post/index', ['post_id' => $post->getPostId()]); ?>">
     <?php } ?>
             <?php echo $post->getPostTitle(); ?>
-    <?php if( $type === 'list' ) { ?>
+    <?php if( $type !== 'single' ) { ?>
         </a>
     <?php } ?>
 </<?php echo $titleTag; ?>>
