--- a/app/code/Krga/Blog/view/frontend/templates/post-single/post.phtml
+++ b/app/code/Krga/Blog/view/frontend/templates/post-single/post.phtml
@@ -136,5 +136,10 @@
             </div>
         <?php endif; ?>
 
+    <?php } else { ?>
+        <?php echo $block->getLayout()->createBlock('Magento\Framework\View\Element\Template')
+            ->setTemplate('Krga_Blog::parts/no-results.phtml')
+            ->toHtml();
+        ?>
     <?php } ?>
 </div>
