--- a/app/code/Krga/Blog/view/frontend/templates/view-tag.phtml
+++ b/app/code/Krga/Blog/view/frontend/templates/view-tag.phtml
@@ -86,7 +86,10 @@ $posts = $block->getTagPosts();
                 </div>
             <?php } ?>
         <?php } else { ?>
-            <p>No posts found matching provided criteria.</p>
+            <?php echo $block->getLayout()->createBlock('Magento\Framework\View\Element\Template')
+                ->setTemplate('Krga_Blog::parts/no-results.phtml')
+                ->toHtml();
+            ?>
         <?php } ?>
     </div>
 
